[package]
name = "pixelsort"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.6"
once_cell = "1.18.0"
rayon = "1.7.0"
ron = "0.8.0"
serde = "1.0.183"
serde_derive = "1.0.183"
serde_json = "1.0.104"
